# ros2-performance

composition_benchmark/apps/: base_publisher_main.cpp  base_subscriber_main.cpp  composable_pub_sub_main.cpp  multi-producer-node.cpp
irobot_benchmark/: CMakeLists.txt
irobot_benchmark/comms_benchmark/profiles/: LAPTOP_RMW_ZENOH_SESSION_CONFIG.json  RPI_DEFAULT_RMW_ZENOH_ROUTER_CONFIG.json  RPI_LOW_LATENCY_SESSION_CONFIG.json  roudi_config.toml  shared_memory_fastdds_config_dynamic_reusable.xml  shared_memory_fastdds_extra_samples.xml  shared_memory_fastdds_realloc.xml  zenoh_low_latency.json
irobot_benchmark/comms_benchmark/scripts/: commands-to-cpu  parse_averages_multi_process.py  parse_averages_single_process.py  run_mix_process_benchmarks.sh  run_multi_process_benchmarks.sh  run_single_process_benchmarks.sh  single_process_benchmarks_plot_results.sh
irobot_benchmark/comms_benchmark/scripts/cli-srv/: run_mix_process_benchmarks.sh  run_multi_process_benchmarks.sh  run_single_process_benchmarks.sh
irobot_benchmark/comms_benchmark/scripts/parse-results/: parse_latency_multi_process.py  parse_latency_single_process.py  split_latency_all.py
irobot_benchmark/comms_benchmark/scripts/pub-sub/: run_mix_process_benchmarks.sh  run_multi_process_benchmarks.sh  run_single_process_benchmarks.sh
irobot_benchmark/comms_benchmark/topologies/: 10_cli_srv_100kb.json  10_cli_srv_10b.json  10_cli_srv_1mb.json  10_cli_srv_4mb.json  cli_srv_100kb.json  cli_srv_10b.json  cli_srv_1mb.json  cli_srv_4mb.json  pub_10b_loaned.json  pub_1mb.json  pub_1mb_loaned.json  pub_4mb.json  pub_4mb_loaned.json  pub_sub_100kb_loaned.json  pub_sub_10b.json  pub_sub_10b_loaned.json  pub_sub_1mb_loaned.json  pub_sub_4mb.json  pub_sub_4mb_loaned.json
irobot_benchmark/comms_benchmark/topologies/cli-srv/: 10_cli_100kb.json  10_cli_10b.json  10_cli_1mb.json  10_cli_4mb.json  10_cli_srv_100kb.json  10_cli_srv_10b.json  10_cli_srv_1mb.json  10_cli_srv_4mb.json  cli_100kb.json  cli_10b.json  cli_1mb.json  cli_4mb.json  cli_srv_1mb.json  srv_100kb.json  srv_10b.json  srv_1mb.json  srv_4mb.json
irobot_benchmark/comms_benchmark/topologies/pub-sub/: pub_100kb.json  pub_100kb_loaned.json  pub_10b.json  pub_sub_100kb.json  pub_sub_1mb.json  srv_10b.json  srv_4mb.json
irobot_benchmark/scripts/: compare_latency.py  plot_cpu_memory.py  plot_latency.py
irobot_benchmark/src/: irobot_benchmark.cpp
irobot_benchmark/topology/: sierra_nevada_fixed_size_debug.json  white_mountain_debug.json  white_mountain_fixed_size_debug.json
irobot_benchmark/topology/tests/single_process/: pub_sub_100kb_ipc_on.json  pub_sub_1mb_ipc_off.json
irobot_interfaces_plugin/: CMakeLists.txt
irobot_interfaces_plugin/msg/: Stamped25kb.msg  Stamped5kb.msg
irobot_interfaces_plugin/srv/: Stamped100kb.srv  Stamped1mb.srv  Stamped4mb.srv
performance_metrics/include/performance_metrics/: events_logger.hpp
performance_metrics/src/: resource_usage_logger.cpp  tracker.cpp
performance_test/include/performance_test/: executors.hpp  system.hpp
performance_test/src/: executors.cpp  system.cpp
performance_test_factory/include/performance_test_factory/: cli_options.hpp
performance_test_factory/src/: cli_options.cpp
